<resources>
    <string name="app_name">Assemble</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="go_back">Go Back</string>
    <string name="note_contents">Type your note here</string>
    <string name="welcome_message">WELCOME! %1$s</string>
    <string name="note_button">Notes</string>
    <string name="list_button">To-do list</string>
    <string name="flashcard_button">Flashcards</string>
    <string name="settings">Settings</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="save">save</string>
    <string name="update">update</string>
    <string name="logout">logout</string>
    <string name="confirm_password">confirm password</string>
    <string name="new_password">new password</string>
    <string name="new_username">new username</string>
    <string name="toggle_password_visibility">Toggle Password Visibility</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="task_deadline">Task Deadline</string>
    <string name="submit">Save</string>
    <string name="todo_list">Todo List</string>
    <string name="add_task">Add Task</string>
    <string name="task_priority">Priority</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="related_notes">Related Notes</string>
    <string name="note_title">Note Title</string>
    <string name="remove">Remove</string>
    <string name="last_updated">Last Updated</string>
    <string name="link_to_task">Link to Task</string>
    <string name="pomodoro_timer">Pomodoro Timer</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
</resources>