<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/todoitem_background"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/taskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:text="@string/task_title" />

    <TextView
        android:id="@+id/taskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#666"
        android:text="@string/task_description" />

    <TextView
        android:id="@+id/taskDeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="#333"
        android:text="@string/task_deadline" />

    <TextView
        android:id="@+id/taskPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_priority"
        android:textColor="#0073FF"
        android:textSize="14sp" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        />


</LinearLayout>
