<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextNewUsername"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/new_username"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/editTextNewPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="12dp"/>

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"/>
</LinearLayout>
