<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.247" />

    <com.google.android.material.navigation.NavigationView
        android:layout_width="221dp"
        android:layout_height="844dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="198dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginBottom="200dp"
            android:text="@string/note_button" />

        <Button
            android:id="@+id/button2"
            android:layout_width="205dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginBottom="110dp"
            android:text="@string/list_button" />

        <Button
            android:id="@+id/button3"
            android:layout_width="200dp"
            android:layout_height="61dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/flashcard_button" />
    </com.google.android.material.navigation.NavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>